# CatchIT

./: .flake8  .gitignore  .whitesource  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSE.spdx  NOTICE  README.md  README.template.md  pyproject.toml
.github/: CODE_OF_CONDUCT.md
.github/workflows/: docusaurus.yml  lint.yml  test.yml
catchit/: catchit.py  config.py  find_tunnel.sh  grep_tunnel.sh  inverse_grep.txt  output.py  regexs.json
scripts/: lint.sh  test.sh
tests/: test_catchit.py
website/: README.md  siteConfig.js
